delete user token on signout fix #778
Former-commit-id: ef8669dee534a936850f9815a75e7bd8d725e912 [formerly 51b6629bbf45652453774d0bbea0273dbe973250] [formerly 61df38f2b8a2f1fce915d7d64467ff4114b96511 [formerly 05c77cc45c94d86caca7963e936485e1e9763737]]
Former-commit-id: 335bd5e16d8d88ddae31c7d537261a45d677b5b3 [formerly 0450e3ff487cf24712bc2acef72bbea062aee1b0]
Former-commit-id: 1710c7b9a93efa4d1eaf69e29736e0b828e01dc3

--- a/templates/base.html
+++ b/templates/base.html
@@ -184,7 +184,7 @@
                 </a>
                 <ul class="dropdown-menu" >
                   <li>
-                    <a href="{{logout_url}}">
+                    <a href="#" onclick="SignOut();return false;">
                       Sign Out
                     </a>
                   </li>
@@ -430,6 +430,12 @@
     if (isMobile){
 
        $(".app-menu").remove();
+    }
+    function SignOut(){
+      if (typeof(Storage) != "undefined") {
+          localStorage.removeItem('access_token');
+      }
+      window.location.replace('{{logout_url}}');
     }
 
   </script>
