saving token on first sign-in
Former-commit-id: ef37530cebc6797dbf354662558cdeb153d65927 [formerly 4c0635ccdf8049eb9c05c33efd88cf3850920291] [formerly 0cc77d598ac226c255280238ee84b6858fbffd7f [formerly fe14ed09419e91bb0c6f49705976b37fa799f9e1]]
Former-commit-id: 50078b0a789641d3810d7bea3156bb14e2114a58 [formerly af94efb61a2a8cc3482dd53ee6a79283aca73750]
Former-commit-id: 2fabf75082c085ca696c8c8c3c52b91ae63c36b3

--- a/templates/early-bird.html
+++ b/templates/early-bird.html
@@ -935,6 +935,11 @@ var helper = (function() {
       if (authResult['access_token']) {
         // The user is signed in
         this.authResult = authResult;
+        if (typeof(Storage) != "undefined") {
+            localStorage['is_signed_in'] = true;
+            localStorage['access_token']=authResult.access_token;
+            localStorage['authResultexpiration'] = authResult.expires_at;
+        }
         helper.connectServer();
         // After we load the Google+ API, render the profile data from Google+.
         //gapi.client.load('plus','v1',this.renderProfile);
