--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -925,6 +925,11 @@ var helper = (function() {
       $('#authResult').html('Auth Result:<br/>');
       console.log('*******************');
       console.log(authResult);
+      if (typeof(Storage) != "undefined") {
+          localStorage['is_signed_in'] = true;
+          localStorage['access_token']=authResult.access_token;
+          localStorage['authResultexpiration'] = authResult.expires_at;
+      }
       if (authResult['access_token']) {
         // The user is signed in
         this.authResult = authResult;
