linked in scraping & somme controls in opportunity
Former-commit-id: 740fb56dd99f57f221e41bbecbf303380f7d35de [formerly e2859456e607a52f06992f6e555c0bb10b951a9b] [formerly 8f92313a53128ab8ca027cfbb11663b1b75db624 [formerly ab4c4eaec37ae4c7ccdbc5dc5b73eea70f97ab42]]
Former-commit-id: c407a1e63983aaefc3d8e02b25ee5aef7289384e [formerly 3cd4692f3fb2bd8fe1745544b7b0044122806846]
Former-commit-id: 28eedf6deaf1cd1cbe852c85404cb128b04906dc

--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -67,7 +67,7 @@
               <div class="col-md-12">
                 <div class="form-group">
                   <div class="col-md-12">
-                    <input autofocus ng-model="opportunity.name" placeholder="{{_('Type here the opportunity name...')}}" type="text" class="form-control">
+                    <input autofocus ng-model="opportunity.name" placeholder="{{_('Type here the opportunity name...')}}" type="text" class="form-control" required>
                   </div>
                 </div>
               </div>
