--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -206,9 +206,12 @@
                                                         </div>
                                                     </div>
                                                     <div class="oppPrice col-md-7">
-                                                        <div class="form-group currencyForm" ng-show="showPriceForm">
+                                                        <form name="Myform" class="form-group currencyForm" ng-show="showPriceForm">
+                                                         <fieldset>
                                                             <div class="col-md-12 margin-bottom-10">
-                                                                <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit">
+                                                                <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit"
+                                                                pattern="\d*"
+                                                                >
                                                             </div>
                                                             <div class="col-md-12 margin-bottom-10">
                                                                 <select  class="form-control" ng-model="opportunity.currency">
@@ -303,9 +306,13 @@
                                                                 </div>
 
                                                             </div>
-                                                        </div>
-                                                        <span ng-hide="showPriceForm" ng-click="showPriceForm = true"><%= opportunity.currency %></span>
-                                                        <span ng-hide="showPriceForm" ng-click="showPriceForm = true"><%= opportunity.amount_total | customCurrency:"":",":".":0 %></span>
+                                                             </fieldset>
+                                                        </form>
+                                                        <span ng-hide="showPriceForm" ng-click="showPriceForm = true">
+                                                              <%= opportunity.currency  %>
+                                                        </span>
+                                                        <span ng-hide="showPriceForm" ng-click="showPriceForm = true">
+                                                        <%= opportunity.amount_total | customCurrency:"":",":".":0 %></span>
 
                                                         <p class="amount-details" ng-click="showPriceForm = true"  ng-show="opportunity.duration_unit != 'fixed'">
                                                             <%= opportunity.duration %> × <%= opportunity.amount_per_unit| customCurrency:"":",":".":0 %>/<%= opportunity.duration_unit %>
@@ -344,11 +351,11 @@
                                                             <form class="form-inline newLeadForm" role="form">
                                                                 <div class="form-group sm-group" style="">
                                                                     <label class="sr-only" for="exampleInputEmail2">Field</label>
-                                                                    <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="Enter field name">
+                                                                    <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="Enter field name" required>
                                                                 </div>
                                                                 <div class="form-group sm-group" style="">
                                                                     <label class="sr-only" for="exampleInputEmail2">Value</label>
-                                                                    <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="Enter a value">
+                                                                    <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="Enter a value" required>
                                                                 </div>
                                                                 <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addCustomField(customfield)">Add</button>
                                                                 <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm = false">X</button>
@@ -570,7 +577,6 @@
                                         </div>
                                     </div>
                                 </div>
-<<<<<<< HEAD
                             </div>
                         </div>
                     </div>
