Show social buttons share on article_list.html
Former-commit-id: cac5edaa604a787df2aece0ee8534e49daab8ae9 [formerly 069636afa66c7dd616908bd9ca35846e6807ef2a] [formerly fe0ce11faf66bd83a6def8a5a4cee93ebe9c4caa [formerly 24bf940609eeb4ebd8fb7c7bb23d1683d9a6c742]]
Former-commit-id: 66b8f31a3d777fe3f0a44ab47aa4818d4ae5e09d [formerly b7da7c179ee1bdd4013eaf6ea507db1a33acd82f]
Former-commit-id: 9db54cc313184ee7e69992d5e12dade14f5f4092

--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -133,6 +133,25 @@
   </div>
   <div class="col-xs-12 col-sm-12 visible-xs visible-sm ">
   <div class="row">
+      <div class="col-md-12">
+        <div class="portlet showCard">
+          <div class="portlet-title line">
+            <div class="caption">
+              Share:
+            </div>
+          </div>
+          <div class="portlet-body" id="chats">
+            <div class="scroller" style="height:200x" data-always-visible="1" data-rail-visible="0">
+              <div id="newTask">
+               <div class="addthis_sharing_toolbox"></div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <div class="row">
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
       <div class="portlet-title">
@@ -195,7 +214,29 @@
       <!-- END PAGE CONTAINER-->
 </div>
 </div>
+
 <div class="fixed-labelsCard visible-md visible-lg">
+   
+    <div class="row">
+      <div class="col-md-12">
+        <div class="portlet showCard">
+          <div class="portlet-title line">
+            <div class="caption">
+              Share:
+            </div>
+          </div>
+          <div class="portlet-body" id="chats">
+            <div class="scroller" style="height:200x" data-always-visible="1" data-rail-visible="0">
+              <div id="newTask">
+               <div class="addthis_sharing_toolbox"></div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   <div class="row">
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
@@ -287,3 +328,4 @@
     //   });
 $('.textfill').textfill({debug: true, maxFontPixels: 16});
 </script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53aef4a2107c3e52"></script>
