--- a/templates/blog/public_article_show.html
+++ b/templates/blog/public_article_show.html
@@ -99,7 +99,7 @@
       </div>
     </div>
   </div>
-  <!-- tasks cards -->
+  <!-- Social button share -->
   <div class="col-md-3 tasks-col">
     <div class="row">
       <div class="col-md-12">
