getting user email to send to track the user behavior in the future
Former-commit-id: faa0af96006ebc5c1074586505a102a9d267e32c [formerly 7f4d5a92b4c62548148916c6636c72591bf23890] [formerly ba2280d689a17ca1ac9a54958c2858c6003dcc00 [formerly 377f372d4dcd37bb8e2555f39c33dbc75e87e7c8]]
Former-commit-id: 3e0d514d5983774093705f4b07c9d73a315bcf03 [formerly b7ddad95c617c95efb59e7415bbd333775d74a0b]
Former-commit-id: 6d70434f477229744e5d43417194791cbc8e74ea

--- a/templates/base.html
+++ b/templates/base.html
@@ -365,7 +365,7 @@
   <div class="footer-inner">
          &copy; i/oGrow  2013 - 2014
   </div>
-
+<input type="hidden" id="userEmail" value="{{user.email}}">
 </div>
 <div class="clearfix"></div>
 <!-- END FOOTER -->
@@ -395,11 +395,11 @@
 
 
 
-     var ROOT = '/_ah/api';
+    //  var ROOT = '/_ah/api';
 
 
 
-       // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+       var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
