--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -657,19 +657,6 @@
 
                 </div>
                 <div class="newContactform portlet-body" id="chats">
-                  <ul id="tasks" class="list-unstyled lead_related_tasks" ng-hide="newTaskform">
-                      <li ng-repeat="task in tasks" id="task_<%=$index%>">
-                        <input value="check1" type="checkbox">
-                        <span>
-                          <a href="/#/tasks/show/<%=task.id%>" class="discussion-content">
-                            <%= task.title%>
-                          </a>
-                          <span ng-show="task.due">
-                            [before: <%= task.due | date:'yyyy-MM-dd '%>]
-                          </span>
-                        </span>
-                      </li>
-                  </ul>
                    <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
                       <li ng-repeat="task in tasks" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
                         <div class="event-container">
@@ -683,7 +670,7 @@
                               <i class="fa fa-chevron-right" ng-hide="showDetails" ng-click="showDetails=true"></i>
                               <i class="fa fa-chevron-down" ng-show="showDetails" ng-click="showDetails=false"></i>
                             </a>
-                            <a class="pull-left relatedEventDeleteBtn" ng-show="showDeleteBtn" ng-click="deleteEvent(event)">
+                            <a class="pull-left relatedEventDeleteBtn" ng-show="showDeleteBtn" ng-click="deleteTask(task)">
                               <i class="fa fa fa-times-circle"></i>
                             </a>
                             <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="task.due" title="<%= task.due| date:'yyyy-MM-dd '%>">
@@ -691,7 +678,7 @@
                             </span>
                           </div>  
                           <div class="moreDetails row" ng-show="showDetails">
-                            <div class="col-md-6 col-xs-6 event-schedule">
+                          <!--  <div class="col-md-6 col-xs-6 event-schedule">
                                 <span class=""><i class="fa fa-calendar"></i>
                                  <%= task.due | date:'dd MMM'%> </span>
                             </div>
@@ -704,9 +691,9 @@
                             <div class="col-md-12">
                                <span class="">
                                   <i class="fa fa-map-marker"></i> 
-                                  <!--<%= event.where %>-->
-                                </span>
-                            </div>
+                                  <%= event.where %>-->
+                                <!--</span>
+                            </div>-->
                           </div>
                         </div>
                       </li>
