show English only language for hangout button
Former-commit-id: c182e399d8bfabad70ce57b999062b12eb82ae82 [formerly 85991ab3ec3d6a8e42ddf2d8f08b9214ade855ab] [formerly 08aa092574d0958d4b420c42ce371b1fede5762d [formerly 3de9deb57fb8a5ce36867ccf4894449ba13b1830]]
Former-commit-id: 21a4b6eea2491eb0acfc120623f4edc4f0594d70 [formerly f58a571a59340ca06f15762637df4cdb230df6df]
Former-commit-id: 9afec91d41aba6e4298303b79cd5a4db092dcd2c

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,8 @@
   <script type="text/javascript">
   window.___gcfg = {
   // lang: 'en',
-    parsetags: 'explicit'
+    parsetags: 'explicit',
+    lang: 'en-US'
   };
   (function() {
     var po = document.createElement('script');
@@ -68,7 +69,6 @@
     s.parentNode.insertBefore(po, s);
   })();
   </script>
-
 </head>
 <body class="page-header-fixed gray-body">
   <!-- BEGIN HEADER -->
