Display picture of the assignee on Task List , # 760
Former-commit-id: cf2b8fe3e15d5b14b70b84764656d7fd8d8fa400 [formerly 5520bc8c6a89c7638e2f28a3f2228e47b1e1109c] [formerly 06c31061d26495eaaf97fccb19a531bff9efea6e [formerly de4caabb8d2e576b23a94a043d1b4edbe2eda586]]
Former-commit-id: c5abd5144fba4124e612c2f2b6636d289d115ffa [formerly df97a8e35bf1ff75cbc0fdd51b8744a5b50974b7]
Former-commit-id: 4b55bbaea72b4643604629c7794bf5fb04fe8386

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -182,6 +182,7 @@
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
                                                <a href="#"> @<%= assignee.display_name %></a>
+                                               <img alt="" src="<%= assignee.photo%>" class="user-photo" />
                                             </span>
                                         </div>
                                     </div>
