changing the datetimepicker on all-tasks page in the task form
Former-commit-id: 9bad175e116cbc79773c5b74f52f061d89e688a1 [formerly cceb44a9546a2e9301b2121674534ca98a6a5524] [formerly b78b8e673c90698aad72f2c65e6cb0ee69f9ad1f [formerly 04632051bc623fd227e42e398cb65c196546cbc0]]
Former-commit-id: 9b83c2fba8c4bcd1bed4709162bed83f9ae3af80 [formerly b3d3a0a538cacd8cc8bed3edb25d31ee3073c700]
Former-commit-id: d0f7473320dd510348a4312931437333746aa75d

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -73,8 +73,15 @@
                 </form>
                 <div>
                   <div class="newTask-meta pull-right">
-                    <datetimepick icon-class='fa fa-bell-o' label-format='MMM d, h:mm a' ng-model='newTask.reminder' class="new-task-reminder pull-right" placeholder=""></datetimepick>
-                     <datetimepick ng-model='newTask.due' class="new-task-date pull-right" label-format='MMM d, h:mm a'></datetimepick>
+                    <div class=" event-schedule">
+                    <p class="dueDatep"ng-hide="showStartsCalendar" ng-click="showStartsCalendar=true"><i class="fa fa-calendar"></i>
+                    <%=newTask.due | date:'yy-MM-dd HH:mm'%>
+                    <span ng-hide="newTask.due" class="placeHolderSmScreen">Due date</span></p>
+                    <div ng-show="showStartsCalendar" class="input-icon">
+                         <i class="fa fa-calendar"></i>
+                         <input cusdatetimepicker data-model="newTask.due" type="text" class="form-control dueDateInput" placeholder="Due date" value="" id="leadEventStartsAt">
+                   </div>
+                  </div>
                   </div>
                 </div>
               </div>
@@ -829,12 +836,6 @@
         }
     }
     handleUniform();
-      $('#dat1').datetimepicker({
-        language: 'fr',
-        pickTime: false
-      }).on('show', function(ev) {
-           console.log("change date from datepicker");
-          }).data('datepicker');
       $('.scroller').each(function () {
             var height;
             if ($(this).attr("data-height")) {
