adding btn for new task and indication for use of # and @ in the new task input
Former-commit-id: 353545b05d2b14438a0464f5becaca37feb356a2 [formerly b929b45a17c143b727e8d8c7c1a5a6e6d78c2791] [formerly 799dda3a5a6f1a6c703ac4fa983e2f0237eaeb40 [formerly 5cf2597fbacdc69de6acb752f29f4c6c331bea5f]]
Former-commit-id: 25fdf6c3d2dd1a5b88cb9edb5e5a0171bab73afb [formerly 01617f5426264e097c589980945c4e718363ccd8]
Former-commit-id: 854703d197bf75184e1d488de9ab64e9cd742e1a

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="showPage newTaskShow custom-show margin-bottom-15  col-md-12">
           <div class="row">
-               <div class="col-md-12">
+               <div class="col-md-11">
                 <form ng-submit="addNewTask()" class="newTaskForm">
                     <div class="form-group">
                       <div class="input-icon right">
@@ -82,9 +82,25 @@
                          <input cusdatetimepicker data-model="newTask.due" type="text" class="form-control dueDateInput" placeholder="Due date" value="" id="leadEventStartsAt">
                    </div>
                   </div>
+                  <div class="btn-group">
+                    <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
+                     <i class="fa fa-exclamation-circle"></i>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                      <li>
+                        <p class="indication-item">Use <span>#</span> to add labels</p>
+                      </li>
+                      <li>
+                        <p class="indication-item">Use<span>@</span> to assign the task</p>
+                      </li>
+                    </ul>
+                  </div>
                   </div>
                 </div>
               </div>
+              <div class="col-md-1">
+                <button type="button" ng-click="addNewTask()" class="btn red  pull-right btn-inline">Add</button>
+                </div>
           </div>
           <div class="row">
             <div class="col-md-12">
