--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -152,7 +152,12 @@
               </div>
             </div>
           </div>
-          <div class="clearfix"></div>
+          <div class="cardElement loaderCard" ng-show="isMoreItemLoading" data-span="all">
+            <div class="loaderCardContent">
+               <img class="img-responsive " src="/static/img/gloader.gif">
+               <span>  Loading...</span>
+            </div>
+        </div>
         </div><!--innercardcontaine-->
         <!--$Blank state-->
         <div class="col-md-12" ng-show="blankStatecontact">
