--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -150,7 +150,12 @@
             </div>
           </div>
         </div>
-        <div class="clearfix"></div>
+        <div class="cardElement loaderCard" ng-show="isMoreItemLoading" data-span="all">
+          <div class="loaderCardContent">
+             <img class="img-responsive " src="/static/img/gloader.gif">
+             <span>  Loading...</span>
+          </div>
+        </div>
       </div><!--/inner-cards-container-->
       <!--$Blank state-->
       <div class="col-md-12 " ng-show="blankStatelead">
