adding btn for delete lead and adding tags on card element to resolve the adding tags problem on small screens
Former-commit-id: cd2ae4b1178287a6b8793d2f8ba1bb7fc5d9825c [formerly a292ae2287989c745c848140686c003d739589b2] [formerly e654beb5eb35842c5d3a418edc7ccb6341ae6558 [formerly 65f42dd116bd40520e8a05b05e538ec6798c4663]]
Former-commit-id: 0d2e7ce2b9cc7c2cbb7fc64412f7ea149f97ffe9 [formerly 3817a6bef8af94833cec4d621a5dec14f1ab5475]
Former-commit-id: 79d2ac069e88438198f3a17813ab695a0e02c1d2

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -99,7 +99,22 @@
     <div class="tab-pane">
     <div class="row ">
       <div class="col-md-12 waterfall" ng-hide="blankStatelead">
-        <div ng-repeat="lead in leads" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false">
+        <div ng-repeat="lead in leads" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
+        <div class="btn-group inCardOptionsBtn">
+            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
+             <i class="fa fa-ellipsis-vertical"></i>
+            </button>
+            <ul class="dropdown-menu drp-dwn-right " role="menu">
+              <li>
+               <a href="" ng-click="editbeforedelete(lead)">
+                   <i class='fa fa-trash-o'></i> Delete </a>
+              </li>
+              <li>
+               <a href="" ng-click="showAssigneeTags(lead)">
+                   <i class='fa fa-tags'></i> Add tags </a>
+              </li>
+            </ul>
+          </div>
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
@@ -109,7 +124,7 @@
                 </a>
               </div>
               <div class="text">
-                <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>
+               <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
                   <a href="/#/leads/show/<%= lead.id %>" class="profile-link">
                     <%= lead.firstname %> <%= lead.lastname %>
@@ -332,6 +347,34 @@
                </div>
           </div>
        </div>
+      <!--assign tags model-->
+   <div id="assigneeTagsToTask" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <h3 id="myModalLabel" class="modal-title">Add Tags </h3>
+            </div>
+            <div class="modal-body">
+               <form id="seletesho" name="deletesho" class="form-horizontal">
+               <div class="form-group">
+                    <select id="select2_sample2" class="form-control select2" multiple>
+                      <option ng-repeat="tag in tags"
+                      value='<%=tag.entityKey%>'>
+                        <%=tag.name%>
+                      </option>
+                    </select>
+                </div>
+            </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                <input ng-hide="isLoadingTask" ng-click="addTagsTothis()" type="submit" class="btn green" value="Add">
+                <input ng-show="isLoadingTask" type="submit" class="btn green" value="Loading..." disabled>
+              </div>
+          </form>
+        </div>
+      </div>
+  </div>
 <script type="text/javascript">
   $("#select2_sample2").select2({
         placeholder: "Click to Select a label",
